# headhunter_ai

./: .gitignore  .npmrc  .pre-commit-config.yaml  CLAUDE.md  biome.json  designpen  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
services/backend/: pyproject.toml
services/backend/alembic/: env.py
services/backend/alembic/versions/: 4dbb1170847c_create_vacancies.py  6dbcdcc3ee81_create_search_history.py  9a8f1a647612_create_rate_limits.py  a7d2e891f4c3_add_auto_submit_column.py  a8c4f2d1e7b3_search_vacancies_assoc.py  b3aa66028b28_create_settings.py  cca6d6365faa_create_applications.py  d0e2aab475d2_add_search_settings.py  e5f9c1a273b4_add_search_id_to_vacancies.py  f2014206e0e7_add_llm_settings_column.py  f6b5f9cefc8b_create_cover_letters.py
services/backend/src/headhunter_backend/: __init__.py  exceptions.py  log.py
services/backend/src/headhunter_backend/ai/: deployment.py  exceptions.py  health.py  layer.py  prompts.py  result.py
services/backend/src/headhunter_backend/api/: app.py  broadcaster.py  dependencies.py  errors.py  events.py  mock.py  schemas.py  subscribers.py
services/backend/src/headhunter_backend/api/routes/: ai.py  applications.py  auth.py  orchestrator.py  search.py  (+4 more)
services/backend/src/headhunter_backend/browser/: __init__.py  core.py  exceptions.py  mappers.py  page.py  parser.py  selectors.py  text.py  writer.py
services/backend/src/headhunter_backend/db/: converters.py  crud.py  models.py  session.py
services/backend/src/headhunter_backend/domain/: enums.py  models.py
services/backend/src/headhunter_backend/orchestrator/: apply_service.py  exceptions.py  queue.py  rate_limiter.py  search.py  state_machine.py
services/backend/tests/: conftest.py  test_ai.py  test_api_ai.py  test_api_applications.py  test_api_auth.py  test_api_orchestrator.py  test_api_rate_limits.py  test_api_search.py  test_api_settings.py  test_api_vacancies.py  test_api_ws.py  test_apply_service.py  test_broadcaster.py  test_browser_core.py  test_db.py  test_orchestrator.py  test_parser.py  test_prompts.py  test_rate_limitter.py  test_search_service.py
(+78 files in other folders)
