[project]
name = "headhunter-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bimba", email = "bimba@flashphoner.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
headhunter-backend = "headhunter_backend:main"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"
