[project]
name = "headhunter-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bimba", email = "bimba@flashphoner.com" }
]
requires-python = ">=3.12"
dependencies = [
    "patchright>=1.59.1",
    "rich>=15.0.0",
    "structlog>=25.5.0",
    "fastapi[standard]>=0.119",
    "uvicorn[standard]>=0.38",
    "selectolax>=0.4.9",
]

[project.scripts]
headhunter-backend = "headhunter_backend.api.app:run"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q -s"
asyncio_mode = "auto"
